--- a/source/_posts/2017-6-26-one.md
+++ b/source/_posts/2017-6-26-one.md
@@ -25,10 +25,11 @@ other code
 [BMI指数例程](https://github.com/serenityd/Python/blob/master/02bmi.py)   
 # 2. break   
 终止循环
+[打印倒三角形](https://github.com/serenityd/Python/blob/master/05equilateraltriangle.py)
 # 3. continue  
 提前结束本次循环  
 猜数字游戏  
-[Example for break & continue](https://github.com/serenityd/Python/blob/master/04breakandcontinue.py)
+[猜数字游戏](https://github.com/serenityd/Python/blob/master/04breakandcontinue.py)
 # 4. while语句   
 while condition:  
 　　do something  
