--- a/source/_posts/2017-6-21-three.md
+++ b/source/_posts/2017-6-21-three.md
@@ -6,7 +6,7 @@ reward: true
 tags: 
  - python
 ---
-1. 字符串：
+# 1. 字符串：
 一串字符
 显示或者打印出来文字信息
 导出
@@ -20,11 +20,60 @@ print("{0} was {1} years old".format(name, age))
 <!-- more -->
 联合：+: print(name + " was " + str(age) + " years old")
 换行符: print("What's your name? \nTom")
-2. 字面常量（literal constant):
+补充:字符串的函数操作
+# 1.1 find
+* str.find(sub[, start[, end]])
+* Return the lowest index in the string where substring sub is found within the slice s[start:end]. Optional arguments start and end are interpreted as in slice notation. Return -1 if sub is not found.
+* sub[, start[, end]]表示后两个参数可选  
+[]内的参数可缺省三种形式
+* find(sub=a)
+* find(sub=a,start=b)
+* find(sub=a,start=b,end=c)
+# 1.2 index
+* str.index(sub[, start[, end]])
+* Like find(), but raise ValueError when the substring is not found.
+* 以上两项若从右侧找rfind() rindex()
+# 1.3 count
+* str.count(sub[, start[, end]])
+* Return the number of non-overlapping occurrences of substring sub in the range [start, end]. Optional arguments start and end are interpreted as in slice notation.
+* 默认全部替换,若有count,则替换不超过count次
+# 1.4 replace
+* str.replace(old, new[, count])
+* Return a copy of the string with all occurrences of substring old replaced by new. If the optional argument count is given, only the first count occurrences are replaced.
+# 1.5 split
+* str.split(sep=None, maxsplit=-1)
+* Return a list of the words in the string, using sep as the delimiter string. If maxsplit is given, at most maxsplit splits are done (thus, the list will have at most maxsplit+1 elements). If maxsplit is not specified or -1, then there is no limit on the number of splits (all possible splits are made).  
+* If sep is given, consecutive delimiters are not grouped together and are deemed to delimit empty strings (for example, '1,,2'.split(',') returns ['1', '', '2']). The sep argument may consist of multiple characters (for example, '1<>2<>3'.split('<>') returns ['1', '2', '3']). Splitting an empty string with a specified separator returns [''].
+# 1.6 partition
+* str.partition(sep)
+* Split the string at the first occurrence of sep, and return a 3-tuple containing the part before the separator, the separator itself, and the part after the separator. If the separator is not found, return a 3-tuple containing the string itself, followed by two empty strings.
+# 1.7 capitalize
+* str.capitalize()
+* Return a copy of the string with its first character capitalized and the rest lowercased.
+# 1.8  title
+* str.title()
+* Return a titlecased version of the string where words start with an uppercase character and the remaining characters are lowercase.
+# 1.9 其他
+* startswith
+* endswith
+* lower
+* upper 
+* ljust
+* rjust
+* center 居中对齐
+* lstrip
+* rstrip
+* strip 删除两端空白字符
+* isalpha
+* isdigit
+* isalnum
+* isspace
+* join
+# 2. 字面常量（literal constant):
 可以直接以字面的意义使用它们：
 如：6，2.24，3.45e-3, "This is a string"
 常量：不会被改变
-3. 变量：
+# 3. 变量：
 储存信息
 属于identifier
 identifier命名规则：
@@ -33,9 +82,9 @@ identifier命名规则：
 区分大小写
 如：合法：i, name_3_4, big_bang
 不合法：2people, this is tom, my-name, >123b_c2
-4. 注释： # 
-5. 缩进(Indentation)
-6. 列表相关
+# 4. 注释： # 
+# 5. 缩进(Indentation)
+# 6. 列表相关
 直接给出代码 以后参考备用
 ``` bash
 #coding=utf-8
@@ -104,3 +153,17 @@ b
 c
 ['b', 'c', 'd']
 ```
+# 7. 切片 
+切片是指对操作的对象截取一部分的操作。  
+切片的语法表达式为：  
+* [start_index : end_index : step]  
+其中：
+* start_index表示起始索引
+* end_index表示结束索引
+* step表示步长，步长不能为0，且默认值为1  
+切片操作是指按照步长，截取从起始索引到结束索引，但不包含结束索引（也就是结束索引减1）的所有元素。
+
+python3支持切片操作的数据类型有list、tuple、string、unicode、range  
+切片返回的结果类型与原对象类型一致  
+切片不会改变原对象，而是重新生成了一个新的对象  
+[具体用法传送门](http://blog.csdn.net/downing114/article/details/70445468)
