--- a/source/_posts/2017-6-21-three.md
+++ b/source/_posts/2017-6-21-three.md
@@ -94,10 +94,45 @@ identifier命名规则：
 # 4. 注释： # 
 # 5. 缩进(Indentation)
 # 6. 列表的相关操作
-## 6.1 添加元素 append 
+## 6.1 添加元素
+* s.append(x) 
+* appends x to the end of the sequence (same as s[len(s):len(s)] = [x])
+* s.extend(t) or s += t
+* extends s with the contents of t (for the most part the same as s[len(s):len(s)] = t)
+* s.insert(i, x)
+* inserts x into s at the index given by i (same as s[i:i] = [x])
 
-
+## 6.2 修改元素
+直接对下标索引进行赋值
 直接给出代码 以后参考备用
+
+## 6.3 查找元素
+* x in s
+* True if an item of s is equal to x, else False
+* x not in s
+* False if an item of s is equal to x, else True
+* s.count(x) 
+* total number of occurrences of x in s
+* s.index(x[, i[, j]])
+* index of the first occurrence of x in s (at or after index i and before index j)
+
+## 6.4 删除元素
+* del s[i:j]
+* same as s[i:j] = []
+* s.pop([i])
+* retrieves the item at i and also removes it from s 
+* The optional argument i defaults to -1, so that by default the last item is removed and returned.
+* s.remove(x)
+* remove the first item from s where s[i] == x
+
+## 6.5 排序元素
+* s.reverse()
+* reverses the items of s in place
+* sort(*, key=None, reverse=False)
+* [用法传送门](https://docs.python.org/3.6/library/stdtypes.html#list.sort)
+* 列表专用函数sort 以上没特殊声明属于sequence序列通用函数
+
+
 ``` bash
 #coding=utf-8
 '''
