--- a/source/_posts/2017-6-23-one.md
+++ b/source/_posts/2017-6-23-one.md
@@ -1,43 +1,46 @@
 ---
-title: Python学习笔记（三）
+title: Python学习笔记（三） 元组 字典
 date: 2017-06-23 09:11:37
 comments: true
 reward: true
 tags: 
  - python
 ---
-1、元组（tuple）
-不可删除其中的元素可以整个删除，不可以更新，用（）创建，其余用法与list相同，有以下需要注意
-#创建只有一个元素的tuple，需要用逗号结尾消除歧义
-a_tuple = (2,)
-#tuple中的list
+# 1. 元组（tuple）
+不可删除其中的元素可以整个删除，不可以更新，用（）创建，其余用法与list相同，有以下需要注意:  
+## 1.1 创建一个元素的Tuple
+* 创建只有一个元素的tuple，需要用逗号结尾消除歧义
+* a_tuple = (2,)
+## 1.2 Tuple中的list
+* Tuple 是不可变 list。 一旦创建了一个 tuple 就不能以任何方式改变它。
+``` stylus
 mixed_tuple = (1, 2, ['a', 'b'])
 print("mixed_tuple: " + str(mixed_tuple))
 mixed_tuple[2][0] = 'c'
 mixed_tuple[2][1] = 'd'
 print("mixed_tuple: " + str(mixed_tuple))
-Tuple 是不可变 list。 一旦创建了一个 tuple 就不能以任何方式改变它。
+```
 <!-- more -->
-2、Tuple 与 list 的相同之处
+## 1.3 Tuple 与 list 的相同之处
 定义 tuple 与定义 list 的方式相同, 除了整个元素集是用小括号包围的而不是方括号。
 Tuple 的元素与 list 一样按定义的次序进行排序。 Tuples 的索引与 list 一样从 0 开始, 所以一个非空 tuple 的第一个元素总是 t[0]。
 负数索引与 list 一样从 tuple 的尾部开始计数。
 与 list 一样分片 (slice) 也可以使用。注意当分割一个 list 时, 会得到一个新的 list ；当分割一个 tuple 时, 会得到一个新的 tuple。
-3、Tuple 不存在的方法
+## 1.4 Tuple 不存在的方法
 您不能向 tuple 增加元素。Tuple 没有 append 或 extend 方法。
 您不能从 tuple 删除元素。Tuple 没有 remove 或 pop 方法。
 然而, 您可以使用 in 来查看一个元素是否存在于 tuple 中。
-4、用 Tuple 的好处
+## 1.5 用 Tuple 的好处
 Tuple 比 list 操作速度快。如果您定义了一个值的常量集，并且唯一要用它做的是不断地遍历它，请使用 tuple 代替 list。
 如果对不需要修改的数据进行 “写保护”，可以使代码更安全。使用 tuple 而不是 list 如同拥有一个隐含的 assert 语句，说明这一数据是常量。如果必须要改变这些值，则需要执行 tuple 到 list 的转换。
-5、Tuple 与 list 的转换
+## 1.6 Tuple 与 list 的转换
 Tuple 可以转换成 list，反之亦然。内置的 tuple 函数接收一个 list，并返回一个有着相同元素的 tuple。而 list 函数接收一个 tuple 返回一个 list。从效果上看，tuple 冻结一个 list，而 list 解冻一个 tuple。
-6、Tuple 的其他应用
+## 1.7 Tuple 的其他应用
 一次赋多值
 v = ('a', 'b', 'e')
 (x, y, z) = v
 解释：v 是一个三元素的 tuple, 并且 (x, y, z) 是一个三变量的 tuple。将一个 tuple 赋值给另一个 tuple, 会按顺序将 v  的每个值赋值给每个变量。
-7、词典
+# 2 词典
 键(key)，对应值(value) 
 ``` bash
 直接给出代码
