--- a/source/_posts/2017-6-23-one.md
+++ b/source/_posts/2017-6-23-one.md
@@ -41,8 +41,9 @@ Tuple 可以转换成 list，反之亦然。内置的 tuple 函数接收一个 l
 v = ('a', 'b', 'e')
 (x, y, z) = v
 解释：v 是一个三元素的 tuple, 并且 (x, y, z) 是一个三变量的 tuple。将一个 tuple 赋值给另一个 tuple, 会按顺序将 v  的每个值赋值给每个变量。
-# 2 词典
+# 2 字典
 键(key)，对应值(value) 
+## 2.1 字典的增删改查
 ``` bash
 直接给出代码
 # -*- coding: utf-8 -*-
@@ -73,36 +74,22 @@ print("rep_test: " + str(rep_test))
 #键必须不可变，所以可以用书，字符串或者元组充当，列表不行
 list_dict = {['Name']: 'John', 'Age':13}
 list_dict = {('Name'): 'John', 'Age':13}
-# 字典内置函数&方法
-# Python字典包含了以下内置函数：
-# 1、cmp(dict1, dict2)：比较两个字典元素。
-# 2、len(dict)：计算字典元素个数，即键的总数。
-# 3、str(dict)：输出字典可打印的字符串表示。
-# 4、type(variable)：返回输入的变量类型，如果变量是字典就返回字典类型。
-# Python字典包含了以下内置方法：
+```
+## 2.2 字典的常用函数&方法
+* cmp(dict1, dict2)：比较两个字典元素。
+* len(dict)：计算字典元素个数，即键的总数。
+* str(dict)：输出字典可打印的字符串表示。
+* type(variable)：返回输入的变量类型，如果变量是字典就返回字典类型。
+* radiansdict.keys()：以列表返回一个字典所有的键
+* radiansdict.values()：以列表返回字典中的所有值
+* radiansdict.items()：以列表返回可遍历的(键, 值) 元组数组
+## 2.3 字典的其余的一些方法
+``` bash
 # 1、radiansdict.clear()：删除字典内所有元素
 # 2、radiansdict.copy()：返回一个字典的浅复制
 # 3、radiansdict.fromkeys()：创建一个新字典，以序列seq中元素做字典的键，val为字典所有键对应的初始值
 # 4、radiansdict.get(key, default=None)：返回指定键的值，如果值不在字典中返回default值
 # 5、radiansdict.has_key(key)：如果键在字典dict里返回true，否则返回false
-# 6、radiansdict.items()：以列表返回可遍历的(键, 值) 元组数组
-# 7、radiansdict.keys()：以列表返回一个字典所有的键
-# 8、radiansdict.setdefault(key, default=None)：和get()类似, 但如果键不已经存在于字典中，将会添加键并将值设为default
-# 9、radiansdict.update(dict2)：把字典dict2的键/值对更新到dict里
-# 10、radiansdict.values()：以列表返回字典中的所有值
+# 6、radiansdict.setdefault(key, default=None)：和get()类似, 但如果键不已经存在于字典中，将会添加键并将值设为default
+# 7、radiansdict.update(dict2)：把字典dict2的键/值对更新到dict里
 ```
-结果
-``` bash
-Traceback (most recent call last):
-  File "C:\Users\Administrator\workspace\TeachingPython\TestBuildinPack.py", line 27, in <module>
-    list_dict = {['Name']: 'John', 'Age':13}
-TypeError: unhashable type: 'list'
-Tom's number is 123
-Tom is a boy
-phone_book: {'Tom': 999, 'Jerry': 456, 'Kim': 789, 'Heath': 888}
-updated phone_book: {'Tom': 999, 'Jerry': 456, 'Kim': 789, 'Heath': 888, 'Ling': 159, 'Lili': 247}
-phone_book after deleting Tom: {'Jerry': 456, 'Kim': 789, 'Heath': 888, 'Ling': 159, 'Lili': 247}
-after clear: {}
-rep_test: {'Name': 'bb', 'age': 5}
-```
-PS:此处error是因为list_dict = {['Name']: 'John', 'Age':13}引起，key的值应该为常量 而list是变量所以提示TypeError 将list换为tuple就没有报错
