--- a/source/_posts/2017-6-23-one.md
+++ b/source/_posts/2017-6-23-one.md
@@ -93,3 +93,12 @@ list_dict = {('Name'): 'John', 'Age':13}
 # 6、radiansdict.setdefault(key, default=None)：和get()类似, 但如果键不已经存在于字典中，将会添加键并将值设为default
 # 7、radiansdict.update(dict2)：把字典dict2的键/值对更新到dict里
 ```
+eg:学生信息管理系统  
+输入1：添加学生信息  
+输入2：查找学生信息   
+输入3：删除学生信息  
+输入4：修改学生信息  
+输入5：显示所有学生信息  
+输入6：按成绩排序  
+输入7：退出  
+[点此查看源码](https://github.com/serenityd/Python/blob/master/06studentinfo.py)
